--- a/services.html
+++ b/services.html
@@ -4,169 +4,130 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Services | Al Massria Al Emaratia</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Al Massria Al Emaratia provides world-class services in import, export, logistics, and commercial agency, helping businesses grow with trusted trade solutions.">
-  <meta name="keywords" content="Al Massria Al Emaratia, services, import export, logistics, commercial agency, trade solutions, Egypt, UAE, international business">
+  <meta name="description" content="Discover the professional services of Al Massria Al Emaratia, including import, export, trade consulting, logistics, and business partnerships.">
+  <meta name="keywords" content="Import, Export, Trade, Logistics, Commercial Agency, Consulting, Egypt, UAE, Al Massria Al Emaratia">
   <meta name="author" content="Al Massria Al Emaratia">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Our Services | Al Massria Al Emaratia">
-  <meta property="og:description" content="Explore the services of Al Massria Al Emaratia, offering global import & export, logistics, and commercial agency solutions.">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?w=800">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.egy-uae.com/services.html">
-
-  <!-- Icons & Fonts -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:"Cairo",sans-serif;}
-    body{line-height:1.6;color:#333;background:#f9f9f9;}
-
-    /* Header */
-    header{
-      background:linear-gradient(90deg,#1976d2,#0d47a1);
-      padding:1rem 0;
-      color:#fff;
-      box-shadow:0 3px 6px rgba(0,0,0,0.2);
-    }
-    .navbar{
-      width:90%;
-      margin:auto;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      flex-wrap:wrap;
-    }
-    .navbar .logo a{color:#fff;font-size:1.5rem;font-weight:700;text-decoration:none;}
-    .nav-links{list-style:none;display:flex;gap:1.5rem;}
-    .nav-links li a{
-      color:#fff;
-      font-weight:600;
-      position:relative;
-      transition:0.3s;
-      text-decoration:none;
-    }
-    .nav-links li a::after{
-      content:"";
-      position:absolute;
-      left:0;
-      bottom:-4px;
-      width:0;
-      height:2px;
-      background:#bbdefb;
-      transition:width 0.3s ease;
-    }
-    .nav-links li a:hover::after,
-    .nav-links li a.active::after{width:100%;}
-
-    /* Hero */
-    .hero{
-      background:url('https://images.unsplash.com/photo-1549924231-f129b911e442?w=1200') center/cover no-repeat;
-      color:#fff;text-align:center;
-      padding:100px 20px;
-      animation:fadeIn 1.5s;
-    }
-    .hero h1{font-size:48px;margin-bottom:10px;}
-    .hero p{font-size:20px;max-width:700px;margin:auto;}
-
-    /* Services */
-    .services-page{padding:60px 20px;}
-    .services-page .container{width:90%;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:25px;}
-    .service-box{
-      background:#fff;
-      border-radius:12px;
-      padding:30px;
-      text-align:center;
-      box-shadow:0 4px 12px rgba(0,0,0,0.1);
-      transition:0.3s;
-      animation:fadeInUp 1s;
-    }
-    .service-box i{font-size:40px;color:#0d47a1;margin-bottom:15px;}
-    .service-box h2{color:#0d47a1;margin-bottom:15px;font-size:22px;}
-    .service-box p{font-size:15px;}
-    .service-box:hover{transform:translateY(-8px);box-shadow:0 6px 20px rgba(0,0,0,0.15);}
-
-    /* Footer */
-    footer{background:#0d47a1;color:#fff;text-align:center;padding:20px 10px;margin-top:50px;}
-    footer p{margin-bottom:8px;}
-    footer .social a{color:#fff;margin:0 10px;font-size:18px;transition:0.3s;}
-    footer .social a:hover{color:#bbdefb;}
-
-    /* Animations */
-    @keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
-    @keyframes fadeInUp{from{opacity:0;transform:translateY(30px);}to{opacity:1;transform:translateY(0);}}
-
-    /* Responsive */
+    *{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
+    body{line-height:1.6;color:#333;}
+    header{background:#004aad;position:fixed;top:0;width:100%;z-index:1000;}
+    header .container{display:flex;justify-content:space-between;align-items:center;padding:15px 8%;}
+    header .logo{font-size:1.5rem;font-weight:bold;color:#fff;}
+    nav ul{list-style:none;display:flex;gap:20px;}
+    nav ul li a{color:#fff;text-decoration:none;position:relative;padding:5px;}
+    nav ul li a.active,
+    nav ul li a:hover{color:#ffd700;}
+    nav ul li a::after{content:"";position:absolute;bottom:-5px;left:0;width:0;height:2px;background:#ffd700;transition:0.3s;}
+    nav ul li a:hover::after,
+    nav ul li a.active::after{width:100%;}
+    .hero{background:url('https://images.unsplash.com/photo-1529070538774-1843cb3265df?auto=format&fit=crop&w=1600&q=80') no-repeat center/cover;
+      height:60vh;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:0 20px;margin-top:70px;position:relative;}
+    .hero::after{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);}
+    .hero .content{position:relative;z-index:1;}
+    .hero h1{font-size:2.8rem;margin-bottom:15px;}
+    .hero p{font-size:1.2rem;}
+    .services-nav{background:#f9f9f9;padding:30px 8%;display:flex;justify-content:space-around;flex-wrap:wrap;gap:20px;}
+    .services-nav .service-item{flex:1 1 150px;text-align:center;cursor:pointer;transition:0.3s;}
+    .services-nav .service-item i{font-size:40px;color:#004aad;margin-bottom:10px;}
+    .services-nav .service-item:hover{transform:translateY(-5px);}
+    .services-details{padding:50px 8%;background:#fff;}
+    .service-detail{display:none;animation:fadeIn 0.6s ease;}
+    .service-detail.active{display:block;}
+    .service-detail h2{color:#004aad;margin-bottom:15px;}
+    .service-detail p{margin-bottom:15px;}
+    @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+    footer{background:#004aad;color:#fff;text-align:center;padding:15px;margin-top:40px;}
     @media(max-width:768px){
-      .nav-links{flex-direction:column;gap:0.5rem;}
-      .navbar{flex-direction:column;align-items:flex-start;}
-      .hero h1{font-size:32px;}
-      .hero p{font-size:16px;}
+      nav ul{flex-direction:column;gap:10px;}
+      .hero h1{font-size:2rem;}
     }
   </style>
 </head>
 <body>
   <!-- Header -->
   <header>
-    <nav class="navbar">
-      <div class="logo"><a href="index.html">Al Massria Al Emaratia</a></div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html" class="active">Services</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="logo">Al Massria Al Emaratia</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <section class="hero">
-    <h1>Our Services</h1>
-    <p>Explore the trusted trade and logistics services we provide to businesses worldwide.</p>
+    <div class="content">
+      <h1>Our Services</h1>
+      <p>Professional trade and business solutions tailored to your success.</p>
+    </div>
   </section>
 
-  <!-- Services -->
-  <section class="services-page">
-    <div class="container">
-      <div class="service-box">
-        <i class="fas fa-ship"></i>
-        <h2>Import & Export</h2>
-        <p>Comprehensive import and export services ensuring compliance with international standards and smooth cross-border operations.</p>
-      </div>
-      <div class="service-box">
-        <i class="fas fa-handshake"></i>
-        <h2>Commercial Agency</h2>
-        <p>Representing leading brands and building long-term partnerships across diverse global markets.</p>
-      </div>
-      <div class="service-box">
-        <i class="fas fa-truck-fast"></i>
-        <h2>Logistics Solutions</h2>
-        <p>Efficient and reliable logistics tailored to meet the needs of our global clients.</p>
-      </div>
-      <div class="service-box">
-        <i class="fas fa-lightbulb"></i>
-        <h2>Business Consulting</h2>
-        <p>Expert advice and strategies in trade, operations, and supply chain to support sustainable growth.</p>
-      </div>
-      <div class="service-box">
-        <i class="fas fa-chalkboard-teacher"></i>
-        <h2>Training Programs</h2>
-        <p>Specialized training in international trade and operations to empower businesses and professionals.</p>
-      </div>
+  <!-- Services Navigation -->
+  <section class="services-nav">
+    <div class="service-item" onclick="showService('import')">
+      <i class='bx bx-globe'></i>
+      <h3>Import & Export</h3>
+    </div>
+    <div class="service-item" onclick="showService('agency')">
+      <i class='bx bx-briefcase'></i>
+      <h3>Commercial Agency</h3>
+    </div>
+    <div class="service-item" onclick="showService('logistics')">
+      <i class='bx bx-package'></i>
+      <h3>Logistics</h3>
+    </div>
+    <div class="service-item" onclick="showService('consulting')">
+      <i class='bx bx-bar-chart-alt'></i>
+      <h3>Consulting</h3>
+    </div>
+    <div class="service-item" onclick="showService('training')">
+      <i class='bx bx-chalkboard'></i>
+      <h3>Training</h3>
+    </div>
+  </section>
+
+  <!-- Service Details -->
+  <section class="services-details">
+    <div id="import" class="service-detail active">
+      <h2>Import & Export Solutions</h2>
+      <p>We facilitate international trade by offering reliable import and export services. From sourcing products to ensuring compliance with global standards, we guarantee smooth cross-border operations.</p>
+    </div>
+    <div id="agency" class="service-detail">
+      <h2>Commercial Agency</h2>
+      <p>As a trusted commercial agent, we represent global brands and build long-term partnerships in diverse markets, ensuring business growth and sustainable success.</p>
+    </div>
+    <div id="logistics" class="service-detail">
+      <h2>Logistics & Supply Chain</h2>
+      <p>Our logistics solutions cover freight forwarding, customs clearance, and warehousing, helping businesses move products efficiently and cost-effectively.</p>
+    </div>
+    <div id="consulting" class="service-detail">
+      <h2>Business Consulting</h2>
+      <p>We provide expert consulting services to guide businesses in trade operations, compliance, and international expansion strategies.</p>
+    </div>
+    <div id="training" class="service-detail">
+      <h2>Professional Training</h2>
+      <p>Our training programs equip individuals, factories, and companies with the skills and knowledge needed to excel in global trade and supply chain management.</p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
-    <div class="social">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    </div>
   </footer>
+
+  <script>
+    function showService(serviceId){
+      const details=document.querySelectorAll('.service-detail');
+      details.forEach(detail=>detail.classList.remove('active'));
+      document.getElementById(serviceId).classList.add('active');
+    }
+  </script>
 </body>
 </html>
