--- a/products.html
+++ b/products.html
@@ -1,52 +1,173 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="products-title">المنتجات - المؤسسة المصرية الإماراتية</title>
-    <meta name="description" content="استكشف مجموعة واسعة من المنتجات التي نستوردها ونصدرها عبر المؤسسة المصرية الإماراتية.">
-    
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Services - Import & Export</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Reset */
+    * {margin:0;padding:0;box-sizing:border-box;}
+
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f9f9f9;
+    }
+
+    /* Banner */
+    header {background: linear-gradient(90deg, #004aad, #0077ff);padding: 15px 0;}
+    nav {display: flex;justify-content: center;gap: 30px;}
+    nav a {
+      text-decoration: none;color: #fff;font-weight: 500;font-size: 16px;position: relative;
+    }
+    nav a::after {
+      content: "";position: absolute;width: 0;height: 3px;background: #fff;left: 0;bottom: -6px;
+      transition: width 0.3s ease;border-radius: 2px;
+    }
+    nav a:hover::after, nav a.active::after {width: 100%;}
+
+    /* Hero */
+    .hero {
+      background: url('https://images.unsplash.com/photo-1529070538774-1843cb3265df?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      color: white;text-align: center;padding: 100px 20px;
+    }
+    .hero h1 {font-size: 48px;margin-bottom: 15px;text-shadow: 1px 1px 8px rgba(0,0,0,0.6);}
+    .hero p {font-size: 20px;text-shadow: 1px 1px 6px rgba(0,0,0,0.6);}
+
+    /* Sections General */
+    section {max-width: 1200px;margin: 50px auto;padding: 20px;}
+    section h2 {text-align: center;margin-bottom: 40px;font-size: 32px;color: #004aad;}
+
+    /* Services */
+    .service-grid, .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+    }
+    .service, .product {
+      background: white;border-radius: 12px;padding: 30px 20px;text-align: center;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .service i, .product i {font-size: 40px;color: #0077ff;margin-bottom: 20px;}
+    .service h3, .product h3 {margin-bottom: 15px;font-size: 22px;color: #004aad;}
+    .service p, .product p {font-size: 15px;color: #666;}
+    .service:hover, .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    }
+    .product a {
+      display: inline-block;margin-top: 12px;text-decoration: none;
+      color: #004aad;font-weight: bold;font-size: 14px;
+    }
+    .product a:hover {text-decoration: underline;}
+
+    /* Back Button */
+    .back-btn {display: block;margin: 40px auto;text-align: center;}
+    .back-btn a {
+      background: #004aad;color: white;padding: 12px 24px;border-radius: 8px;text-decoration: none;
+      font-weight: bold;transition: background 0.3s ease;
+    }
+    .back-btn a:hover {background: #00327a;}
+
+    /* Footer */
+    footer {background: #004aad;color: white;text-align: center;padding: 20px 10px;margin-top: 40px;}
+    footer p {font-size: 14px;}
+  </style>
 </head>
-<body class="rtl">
-    <!-- Navbar (same as index.html) -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="Al Massria Al Emaratia Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" data-lang-key="home">الرئيسية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html" data-lang-key="about">من نحن</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html" data-lang-key="services">خدماتنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="products.html" data-lang-key="products">المنتجات</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faqs.html" data-lang-key="faqs">الأسئلة الشائعة</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="compliance.html" data-lang-key="compliance">الامتثال والجودة</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="careers.html" data-lang-key="careers">الوظائف</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html" data-lang-key="contact">اتصل بنا</a>
-                    </li>
-                </ul>
-                <span class="navbar-text ms-3 lang-switcher" id="lang
+<body>
+
+  <!-- Banner -->
+  <header>
+    <nav>
+      <a href="#" class="active">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Our Import & Export Services</h1>
+    <p>Connecting businesses worldwide with professional trade solutions</p>
+  </section>
+
+  <!-- Services -->
+  <section class="services">
+    <h2>What We Offer</h2>
+    <div class="service-grid">
+      <div class="service">
+        <i class="fas fa-ship"></i>
+        <h3>Global Shipping</h3>
+        <p>Efficient sea and air freight solutions to ensure your goods reach global markets safely and on time.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-boxes-stacked"></i>
+        <h3>Product Sourcing</h3>
+        <p>Find the best suppliers and products worldwide with our trusted sourcing and procurement services.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-handshake"></i>
+        <h3>Trade Partnerships</h3>
+        <p>We connect businesses with reliable partners and distributors to expand their market reach globally.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-globe"></i>
+        <h3>Customs & Documentation</h3>
+        <p>Professional handling of import/export documents, compliance, and customs clearance services.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Products -->
+  <section class="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <div class="product">
+        <i class="fas fa-seedling"></i>
+        <h3>Agricultural Products</h3>
+        <p>Fresh fruits, vegetables, and grains exported worldwide with premium quality standards.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="product">
+        <i class="fas fa-plug"></i>
+        <h3>Electronics & Appliances</h3>
+        <p>Wide range of electrical devices and household appliances for global trade.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="product">
+        <i class="fas fa-shirt"></i>
+        <h3>Textiles & Clothing</h3>
+        <p>High-quality fabrics and garments exported to meet international demands.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="product">
+        <i class="fas fa-flask"></i>
+        <h3>Chemicals & Raw Materials</h3>
+        <p>Reliable supply of industrial chemicals and raw materials for manufacturers.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="product">
+        <i class="fas fa-drumstick-bite"></i>
+        <h3>Food & Beverages</h3>
+        <p>Processed food, drinks, and packaged goods distributed to global markets.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Back Button -->
+  <div class="back-btn">
+    <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Import & Export Services. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
