--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Import & Export</title>
+  <meta name="description" content="Read the Privacy Policy of Egyptian Emirati Foundation for Import & Export to understand how we protect your data and ensure confidentiality.">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Reset */
+    * {margin:0;padding:0;box-sizing:border-box;}
+
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.7;
+      color: #333;
+      background: #f9f9f9;
+    }
+
+    /* Banner */
+    header {background: linear-gradient(90deg, #004aad, #0077ff);padding: 15px 0;}
+    nav {display: flex;justify-content: center;gap: 30px;}
+    nav a {
+      text-decoration: none;color: #fff;font-weight: 500;font-size: 16px;position: relative;
+    }
+    nav a::after {
+      content: "";position: absolute;width: 0;height: 3px;background: #fff;left: 0;bottom: -6px;
+      transition: width 0.3s ease;border-radius: 2px;
+    }
+    nav a:hover::after, nav a.active::after {width: 100%;}
+
+    /* Hero */
+    .hero {
+      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      color: white;text-align: center;padding: 100px 20px;
+    }
+    .hero h1 {font-size: 42px;margin-bottom: 15px;text-shadow: 1px 1px 8px rgba(0,0,0,0.6);}
+    .hero p {font-size: 20px;text-shadow: 1px 1px 6px rgba(0,0,0,0.6);}
+
+    /* Sections */
+    section {max-width: 1100px;margin: 50px auto;padding: 20px;}
+    section h2 {color: #004aad;font-size: 26px;margin-bottom: 15px;}
+    section p {margin-bottom: 20px;color:#555;}
+
+    /* Back Button */
+    .back-btn {display: block;margin: 40px auto;text-align: center;}
+    .back-btn a {
+      background: #004aad;color: white;padding: 12px 24px;border-radius: 8px;text-decoration: none;
+      font-weight: bold;transition: background 0.3s ease;
+    }
+    .back-btn a:hover {background: #00327a;}
+
+    /* Footer */
+    footer {background: #004aad;color: white;text-align: center;padding: 20px 10px;margin-top: 40px;}
+    footer p {font-size: 14px;}
+  </style>
+</head>
+<body>
+
+  <!-- Banner -->
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Privacy Policy</h1>
+    <p>Your trust and data security are our top priority</p>
+  </section>
+
+  <!-- Privacy Content -->
+  <section>
+    <h2>Introduction</h2>
+    <p>This Privacy Policy explains how we collect, use, and protect your personal data when you engage with Egyptian Emirati Foundation for Import & Export. By using our services, you agree to the terms described in this policy.</p>
+
+    <h2>Information We Collect</h2>
+    <p>We may collect personal data such as your name, email address, phone number, and business information. Additionally, we may collect technical data like IP addresses and browsing behavior for security and analytics purposes.</p>
+
+    <h2>How We Use Your Information</h2>
+    <p>Your information is used to provide and improve our services, process trade requests, enhance communication, and ensure compliance with international trade regulations.</p>
+
+    <h2>Data Protection</h2>
+    <p>We implement strict security measures to safeguard your personal data. All sensitive information is stored securely, and access is limited to authorized personnel only.</p>
+
+    <h2>Sharing of Information</h2>
+    <p>We do not sell or rent your personal information. Data may only be shared with trusted partners for the purpose of fulfilling trade operations or legal obligations.</p>
+
+    <h2>Your Rights</h2>
+    <p>You have the right to access, update, or request the deletion of your personal data. For inquiries, please contact us through our official communication channels.</p>
+
+    <h2>Policy Updates</h2>
+    <p>We may update this Privacy Policy from time to time to reflect changes in our practices or legal requirements. Updated versions will be published on this page.</p>
+  </section>
+
+  <!-- Back Button -->
+  <div class="back-btn">
+    <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Al Massria Al Emaratia Foundation - All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
