--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,118 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms & Conditions - Import & Export</title>
+  <meta name="description" content="Read the Terms & Conditions of Egyptian Emirati Foundation for Import & Export to understand the rules and policies governing the use of our services.">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Reset */
+    * {margin:0;padding:0;box-sizing:border-box;}
+
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.7;
+      color: #333;
+      background: #f9f9f9;
+    }
+
+    /* Banner */
+    header {background: linear-gradient(90deg, #004aad, #0077ff);padding: 15px 0;}
+    nav {display: flex;justify-content: center;gap: 30px;}
+    nav a {
+      text-decoration: none;color: #fff;font-weight: 500;font-size: 16px;position: relative;
+    }
+    nav a::after {
+      content: "";position: absolute;width: 0;height: 3px;background: #fff;left: 0;bottom: -6px;
+      transition: width 0.3s ease;border-radius: 2px;
+    }
+    nav a:hover::after, nav a.active::after {width: 100%;}
+
+    /* Hero */
+    .hero {
+      background: url('https://images.unsplash.com/photo-1556761175-129418cb2dfe?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      color: white;text-align: center;padding: 100px 20px;
+    }
+    .hero h1 {font-size: 42px;margin-bottom: 15px;text-shadow: 1px 1px 8px rgba(0,0,0,0.6);}
+    .hero p {font-size: 20px;text-shadow: 1px 1px 6px rgba(0,0,0,0.6);}
+
+    /* Sections */
+    section {max-width: 1100px;margin: 50px auto;padding: 20px;}
+    section h2 {color: #004aad;font-size: 26px;margin-bottom: 15px;}
+    section p {margin-bottom: 20px;color:#555;}
+
+    /* Back Button */
+    .back-btn {display: block;margin: 40px auto;text-align: center;}
+    .back-btn a {
+      background: #004aad;color: white;padding: 12px 24px;border-radius: 8px;text-decoration: none;
+      font-weight: bold;transition: background 0.3s ease;
+    }
+    .back-btn a:hover {background: #00327a;}
+
+    /* Footer */
+    footer {background: #004aad;color: white;text-align: center;padding: 20px 10px;margin-top: 40px;}
+    footer p {font-size: 14px;}
+  </style>
+</head>
+<body>
+
+  <!-- Banner -->
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Terms & Conditions</h1>
+    <p>Please read the terms carefully before using our services</p>
+  </section>
+
+  <!-- Terms Content -->
+  <section>
+    <h2>1. Introduction</h2>
+    <p>These Terms & Conditions govern the use of services provided by the Egyptian Emirati Foundation for Import & Export. By engaging with our services, you agree to comply with these terms.</p>
+
+    <h2>2. Use of Services</h2>
+    <p>Our services are intended for legal trade and business operations only. You agree not to misuse or engage in activities that violate international trade laws or regulations.</p>
+
+    <h2>3. Contracts & Agreements</h2>
+    <p>All business contracts, trade deals, and agency agreements must be documented in writing and signed by both parties. Verbal agreements are not considered binding.</p>
+
+    <h2>4. Payment & Fees</h2>
+    <p>Payments must be made in accordance with agreed terms and timelines. Delays in payment may result in service suspension or additional charges.</p>
+
+    <h2>5. Confidentiality</h2>
+    <p>We ensure the confidentiality of client information and trade data. However, clients are also responsible for safeguarding shared business documents and credentials.</p>
+
+    <h2>6. Limitation of Liability</h2>
+    <p>While we strive to provide high-quality services, the Egyptian Emirati Foundation shall not be liable for losses caused by unforeseen circumstances, customs delays, or force majeure events.</p>
+
+    <h2>7. Termination</h2>
+    <p>We reserve the right to suspend or terminate services if a client violates these terms or engages in unlawful trade practices.</p>
+
+    <h2>8. Governing Law</h2>
+    <p>These Terms & Conditions are governed by international trade regulations and applicable laws of Egypt and the UAE.</p>
+
+    <h2>9. Updates</h2>
+    <p>We may update these Terms & Conditions from time to time. Continued use of our services implies acceptance of the updated terms.</p>
+  </section>
+
+  <!-- Back Button -->
+  <div class="back-btn">
+    <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Al Massria Al Emaratia Foundation - All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
