--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="logo">
         <a href="index.html">
           <!-- Using a placeholder image for the logo. You should replace this with a stable, professional logo. -->
-          <img src="https://via.placeholder.com/40x40/BBDEFB/0D47A1?text=Logo" alt="Al Massria Al Emaratia Company Logo" class="company-logo-header"> 
+          <img src="https://lh5.googleusercontent.com/M0_JGz1RGuuoM28TEXFPLojIwjnd2g4wwxrJhghKpYcw-sdCY9OvcPSsTxWSvoHCsPvhb003C3CraWQTDJFVNTKHKQR2wpth4tAKz_n-pW4zKkqTlyRg91Q7Sv2qxf7CObT-LnTsR2Y=w16383" alt="Al Massria Al Emaratia Logo" class="company-logo-header"> 
           Al Massria Al Emaratia
         </a>
       </div>
