--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     /* Hero Section */
     .hero{
-      background:url('https://images.unsplash.com/photo-1505839673365-e3971f8d9184?w=1200') center/cover no-repeat;
+      background:url('https://images.pexels.com/photos/12810604/pexels-photo-12810604.jpeg') center/cover no-repeat;
       color:#fff;text-align:center;
       padding:100px 20px;
       animation:fadeIn 1.5s;
