--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="team-members-grid"> 
           <div class="team-member">
             <!-- Using a placeholder image for team members. Replace with actual photos. -->
-            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJ1c2luZXNzJTIwbWFufGVufDB8fDB8fHww" alt="Ismail El Menshawy Photo" /> 
+            <img src="https://uc2619d8c80f91a5999ee6b073a7.previews.dropboxusercontent.com/p/thumb/ACzB_yOswJivCRlIEU2bL9o4W0X3RNZ5-2MuZhm5PL25E6UcUwVUduowbF1fpuldfa3_MjEBkbpWaqo_60wv9_J9EOQv-1VP9Z775pGrOKrY8G8J2KFJT_HOhcRUPIb3_VVzVq5NQM0jpOx_Aba5EQ05qVcdWZbtEc3nE5_yyd_N4L12tbT7p1RxnEgNAYxKDvzn5ZMIXP6pfF18-eZQxMiIyjkgyQaHqKw5wtYMmQ9JqMWBl6D_bg3l86J5tJbaYNqxCJb6uP7u6MagMMfzPm6e0OVSVZkfuuGmhKFeL6ozydt5r3o-QazdONS-HXJLbrGs3HxX_dh9y_KjX2KkIswm9bsiTSsNK30DPG22GS0jRRJ0PVA9SGJ2WH7JyW-Q0MVHaLdp4lVU0RBz5M6RuQji/p.jpeg?is_prewarmed=true" alt="Ismail El Menshawy Photo" /> 
             <h3>Ismail El Menshawy</h3>
             <p>CEO & Founder</p>
           </div>
