--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <p>CEO & Founder</p>
           </div>
           <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1542157545-a74b2762a045?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fGJ1c2luZXNzJTIwbWFufGVufDB8fDB8fHww" alt="Ahmed Badrawy Photo" /> 
+            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg" alt="Ahmed Badrawy Photo" /> 
             <h3>Ahmed Badrawy</h3>
             <p>Head of Digital Transformation</p>
           </div>
