--- a/index.html
+++ b/index.html
@@ -421,6 +421,11 @@
             <h3>Ahmed Badrawy</h3>
             <p>Head of Digital Transformation</p>
           </div>
+           <div class="team-member">
+            <img src="https://images.pexels.com/photos/9304917/pexels-photo-9304917.jpeg" alt="Ahmed Badrawy Photo" /> 
+            <h3>Nada El-Sayed</h3>
+            <p>Development Manager</p>
+          </div>
         </div>
       </div>
     </section>
