--- a/about.html
+++ b/about.html
@@ -124,6 +124,21 @@
       .hero h1{font-size:32px;}
       .hero p{font-size:16px;}
     }
+    /* تصميم الزر الخاص بالترجمة */
+#google_translate_element select {
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  color: #333;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#google_translate_element select:hover {
+  background-color: #eaeaea;
+}
   </style>
 </head>
 <body>
@@ -139,6 +154,23 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+      <!-- زر اللغة -->
+  <div id="google_translate_element" style="margin-left: 20px;"></div>
+
+<!-- جوجل ترانسليت -->
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {
+      pageLanguage: 'en', 
+      includedLanguages: 'ar,en,de,tr,hi,zh-CN', 
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    },
+    'google_translate_element'
+  );
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </header>
 
   <!-- Hero -->
