--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
       <div class="logo"><a href="index.html">Al Massria Al Emaratia</a></div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="services.html" class="active">Services</a></li>
         <li><a href="faqs.html">FAQs</a></li>
         <li><a href="contact.html">Contact</a></li>
