--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
       <div class="logo"><a href="index.html">Al Massria Al Emaratia</a></div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="about.html" class="active">About Us</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="faqs.html">FAQs</a></li>
         <li><a href="contact.html">Contact</a></li>
