--- a/products.html
+++ b/products.html
@@ -157,6 +157,14 @@
         <a href="#">Learn More</a>
       </div>
     </div>
+     </div>
+      <div class="product">
+        <i class="fas fa-drumstick-bite"></i>
+        <h3>Consumer Products</h3>
+        <p>Ready-to-use goods including perfumes, cosmetics, and lifestyle products designed for global markets.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
   </section>
 
   <!-- Back Button -->
