--- a/products.html
+++ b/products.html
@@ -159,8 +159,8 @@
     
       <div class="product">
         <i class="fas fa-spray-can"></i>
-        <h3>Consumer Products</h3>
-        <p>Ready-to-use goods including perfumes, cosmetics, and lifestyle products designed for global markets.</p>
+        <h3>Perfumes & Cosmetics</h3>
+        <p>High-quality perfumes and personal care products crafted to meet international standards.</p>
         <a href="#">Learn More</a>
       </div>
     
