--- a/products.html
+++ b/products.html
@@ -161,7 +161,9 @@
         <i class="fas fa-spray-can"></i>
         <h3>Perfumes & Cosmetics</h3>
         <p>High-quality perfumes and personal care products crafted to meet international standards.</p>
-        <a href="#">Learn More</a>
+        <a href="products/Perfumes-&-Cosmetics.html
+
+">Learn More</a>
       </div>
     
   </section>
