--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="product-card">
-        <img src="https://picsum.photos/300/220?random=2" alt="Perfume 2">
+        <img src="https://lh5.googleusercontent.com/KCEZd4cjiNDpC78_OlLyk7l5D-H8FMAw9UZjH8HKFqMQR1kQfi6uY4uyaeumcOutUeFif-cqmUeaGExtHpcjOrMFL8Tpu38p6gZqN98DFhUX_VWcclEfQFxeG_dFOLJJ8MmzUy5q_e7sKgKrEJlrHb2NjbpCYMJ3NkBg5xMjqopODw9XrvTv2w=w1280" alt="Perfume 2">
         <h3>Sultan Al Oud</h3>
         <p>A luxurious oriental fragrance with rich oud notes.</p>
         <div class="price"><span class="old">$75</span><span class="new">$55</span></div>
