--- a/products/Perfumes-&-Cosmetics.html
+++ b/products/Perfumes-&-Cosmetics.html
@@ -120,7 +120,7 @@
       </div>
 
       <div class="product-card">
-        <img src="https://picsum.photos/300/220?random=3" alt="Perfume 3">
+        <img src="https://lh5.googleusercontent.com/IyhSGF87srapa1d7HIKol4rvEZp3fvOiE8bvUQHi7p_zvSD3h3P6ZgeDy3eLY0yVnAVtcVl4A7c4HhmWsIMEeMlgnDiX6j0lQ8ggbRJxofQfGxY-TdJ2PF0IovuQ4THdKLIL-mulGsdoPB9E_JLRkNxUHCcxCyO2uwV5-geHBjAAe6uVKcswjw=w1280" alt="Perfume 3">
         <h3>Shaikh Zayed Oud</h3>
         <p>A warm luxurious oud fragrance with a distinctive oriental touch.</p>
         <div class="price"><span class="old">$70</span><span class="new">$52</span></div>
